# git-prompt

./: Cargo.toml  README.txt
src/: git.rs  main.rs
